--- a/button.css
+++ b/button.css
@@ -1,8 +1,8 @@
-button {
+/* button {
     display: grid;
     margin: 5px;
     cursor: pointer;
     height: 30px;
     width: 30px;
     border: 5px solid;
-}
+} */
