popup ui background added

--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,10 @@
 
-
+body {
+    background-image: url("images/Web_Wizard.png");
+    background-size: cover;
+    background-
+    
+}
 h2 {
     margin-bottom: 5px;
 }
