--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,11 @@
 
 
+body {
+    background-image: url("images/Web_Wizard.png");
+    background-size: cover;
+    
+}
+
 h2 {
     margin-bottom: 5px;
 }
