--- a/popup.css
+++ b/popup.css
@@ -1,8 +1,14 @@
 
 body {
     background-image: url("images/Web_Wizard.png");
-    background-size: cover;
-    
+    background-size: 25%;
+    background-repeat: no-repeat;
+    width: 500px;
+    height: 250px;
+}
+.popup-ui {
+display: flex;
+
 }
 
 h2 {
@@ -29,16 +35,18 @@ button {
 }
 
 #storedDesign1 {
-border: 5px, solid, black;
+border: 5px solid black;
 border-radius: 15%;
 height: 20px;
 width: 20px;
 }
 
 #colorPicker {
-    border: 2px, solid, black;
-    height: 50px;
-    width: 50px;
+    border: 2px solid black;
+    height: 60px;
+    width: 70px;
+    word-wrap: normal;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: end;
 }
