--- a/popup.css
+++ b/popup.css
@@ -1,124 +1,104 @@
-
 body {
-    background-image: url("images/Web_Wizard.png");
-    background-size: 75%;
-    background-repeat: no-repeat;
-    background-position: -28% 65%;
-    width: 600px;
-    height: 375px;
-    overflow: hidden;
-    font-weight: bolder;
-    background-color: #a1dffb;
-   
+  background-image: url('images/Web_Wizard.png');
+  background-size: 75%;
+  background-repeat: no-repeat;
+  background-position: -28% 65%;
+  width: 600px;
+  height: 375px;
+  overflow: hidden;
+  font-weight: bolder;
+  background-color: #a1dffb;
 }
 
-
 .popup-ui {
-display: flex;
-flex-direction: column;
-height: 100%;
-width: 100%;
-
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
 .top-section {
-    display: flex;
-    flex-direction: row;
-   
-    height: 40%;
-    
-    
+  display: flex;
+  flex-direction: row;
+  height: 40%;
 }
 
 .top-right-section {
-    display: flex;
-    text-align: center;
-    width: 50%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    
+  display: flex;
+  text-align: center;
+  width: 50%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .top-left-section {
-    display: flex;
-    
-    width: 50%;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .bottom-section {
-    display: flex;
-    flex-direction: row;
-    
-    height: 60%;
-    
+  display: flex;
+  flex-direction: row;
+  height: 60%;
 }
 
 .bottom-right-section {
-    
-    display: flex;
-    width: 50%;
-    flex-direction: column;
-    text-align: center;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  text-align: center;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .bottom-left-section {
-    display: flex;
-    
-    width: 50%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-
-input, label {
-    display:block;
+input,
+label {
+  display: block;
 }
-
 
 button {
-    padding: 5px;
-    margin: 5px;
-    cursor: pointer;
-    height: 30px;
-    width: 70px;
-    box-shadow: 1px 1px 1px 1px plum;
-    opacity: 85%;
-    text-align: center;
-    display: inline-block;
+  padding: 5px;
+  margin: 5px;
+  cursor: pointer;
+  height: 30px;
+  width: 70px;
+  box-shadow: 1px 1px 1px 1px plum;
+  opacity: 85%;
+  text-align: center;
+  display: inline-block;
 }
 
 .stored-designs {
-    display: flex;
-    flex-direction: row;
-    height: 75%;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  flex-direction: row;
+  height: 75%;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-
-
-
 input {
-    opacity: 85%;
-    width: 105%;
-    background-color: rgb(252, 230, 107);
+  opacity: 85%;
+  width: 105%;
+  background-color: rgb(252, 230, 107);
 }
 
 h2 {
-    font-family: 'Mr Dafoe';
-    margin: 0;
-    font-size: 3.46em;
-    color: white;
-    text-shadow: 0 0 0.05em #fff, 0 0 0.2em #fe05e1, 0 0 0.3em #fe05e1;
-    margin-left: 2px;
-    
-  }
+  font-family: 'Mr Dafoe';
+  margin: 0;
+  font-size: 3.46em;
+  color: white;
+  text-shadow: 0 0 0.05em #fff, 0 0 0.2em #fe05e1, 0 0 0.3em #fe05e1;
+  margin-left: 2px;
+}
